
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src gschemas

applicationsdatadir = $(datadir)/applications

nobase_dist_applicationsdata_DATA = \
        net.hzog.Shell.desktop

xsessionsdatadir = $(datadir)/xsessions

nobase_dist_xsessionsdata_DATA = \
        page.desktop

gnomesessiondatadir = $(datadir)/gnome-session/sessions

nobase_dist_gnomesessiondata_DATA = \
        page.session




