bin_PROGRAMS = page-mutter-compositor

AM_CXXFLAGS =  \
	-fpermissive \
	@MUTTER_CFLAGS@

page_mutter_compositor_SOURCES = \
	page/dropdown_menu.hxx \
	page/dropdown_menu.cxx \
	page/compositor_overlay.hxx \
	page/compositor_overlay.cxx \
	page/popup_notebook0.hxx \
	page/popup_notebook0.cxx \
	page/popup_split.hxx \
	page/popup_split.cxx \
	page/renderable_thumbnail.hxx \
	page/renderable_thumbnail.cxx \
	page/renderable_fadeout_pixmap.hxx \
	page/renderable_fadeout_pixmap.cxx \
	page/renderable_floating_outer_gradien.hxx \
	page/renderable_floating_outer_gradien.cxx \
	page/renderable_notebook_fading.hxx \
	page/renderable_notebook_fading.cxx \
	page/renderable_pixmap.hxx \
	page/renderable_pixmap.cxx \
	page/renderable_solid.hxx \
	page/renderable_solid.cxx \
	page/view.hxx \
	page/view.cxx \
	page/view_rebased.hxx \
	page/view_rebased.cxx \
	page/view_notebook.hxx \
	page/view_notebook.cxx \
	page/view_fullscreen.hxx \
	page/view_fullscreen.cxx \
	page/view_dock.hxx \
	page/view_dock.cxx \
	page/view_floating.hxx \
	page/view_floating.cxx \
	page/view_popup.hxx \
	page/view_popup.cxx \
	page/page_component.hxx \
	page/page_component.cxx \
	page/client_managed.hxx \
	page/client_managed.cxx \
	page/icon_handler.hxx \
	page/icon_handler.cxx \
	page/utils.cxx \
	page/pixmap.cxx \
	page/tree.cxx \
	page/grab_handlers.cxx \
	page/notebook.cxx \
	page/split.cxx \
	page/viewport.cxx \
	page/workspace.cxx \
	page/page.cxx \
	page/display.cxx \
	page/compositor.cxx \
	page/simple2_theme.cxx \
	page/tiny_theme.cxx \
	page/config_handler.cxx \
	page/client_proxy.cxx \
	page/popup_alt_tab.cxx \
	page/main.cxx \
	page/blur_image_surface.cxx \
	page/leak_checker.cxx \
	page/tree.hxx \
	page/blur_image_surface.hxx \
	page/notebook.hxx \
	page/compositor.hxx \
	page/client_proxy.hxx \
	page/config_handler.hxx \
	page/workspace.hxx \
	page/split.hxx \
	page/viewport.hxx \
	page/grab_handlers.hxx \
	page/client_managed.hxx \
	page/client_not_managed.hxx \
	page/client_base.hxx \
	page/display.hxx \
	page/mainloop.hxx \
	page/page.hxx \
	page/utils.hxx \
	page-plugin.hxx \
	page-plugin.cxx \
	main.cxx 

page_mutter_compositor_LDADD = \
	@MUTTER_LIBS@ 

